--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,9 +8,9 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require_self
  *= require jquery.ui.slider
  *= require_tree .
+ *= require_self
 */
 
 div.graph-area {
@@ -32,7 +32,56 @@ div.graph-draggables-dock {
   max-width: 30px;
 }
 
+//Used to bring the connector dots to the front
 ._jsPlumb_connector { z-index:4; }
 ._jsPlumb_endpoint { z-index:5; }
 
 .fnt_size { font-size:16px;}
+
+.slider .ui-slider-handle {
+  position: absolute;
+  z-index: 2;
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+  background: url('handle.png') no-repeat 50% 50%;
+  //background-image:image-url('handle.png');
+  font-weight: bold;  
+  outline: none;
+  border: none;
+  top: -6px;
+}
+
+.slider{
+  border-width: 1px;
+  border-style: solid;
+  border-color: #333 #333 #777 #333;
+  width: 450px;
+  border-radius: 25px;
+  position: absolute;
+  height: 13px;
+  background: inherit;
+}
+
+.ui-slider-range {
+	background: #ffffff; /* Old browsers */
+	height: 100%;
+        position: absolute;
+	border-radius: 25px;
+}
+
+.slider_tooltip {
+  position: absolute;
+  display: block;
+  margin-top: 20px;
+  min-height: 18px;
+  cursor: pointer;
+  text-align: center;
+  border-radius: 3px;
+  border: 1px solid #333;
+}
+
+.slider-label {
+  position: absolute;
+  margin-top: 20px;
+}
