changes to display the labels for the slider

--- a/app/views/environments/_dialogs.html.erb
+++ b/app/views/environments/_dialogs.html.erb
@@ -6,23 +6,9 @@
 <!-- Deployment Configuration dialog  -->
 <%= render 'deployment_configuration', branch: @environment.branch ,db_migrate: @environment.db_migrate %>
 
-<!-- EC2 resource  -->
-<%= render 'ec2_configuration' %>
-
-<!-- Rails resource  -->
-<%= render 'rails_configuration' %>
-
-<!-- JAVA resource  -->
-<%= render 'java_configuration' %>
-
-<!-- PHP resource  -->
-<%= render 'php_configuration' %>
-
-<!-- Mysql resource  -->
-<%= render 'mysql_configuration' %>
-
-<!-- Nginx resource  -->
-<%= render 'nginx_configuration' %>
+<% %w(rails java php mysql nginx).each do |resource_type| %>
+  <%= render 'ec2_type_resource_configuration', resource_type: resource_type %>
+<% end %>
 
 <!-- RDS resource  -->
 <%= render 'rds_configuration' %>
@@ -32,3 +18,4 @@
 
 <!-- EC resource  -->
 <%= render 'elasticache_configuration' %>
+
