--- a/app/views/projects/_project_environments.html.erb
+++ b/app/views/projects/_project_environments.html.erb
@@ -21,7 +21,7 @@
       </tr>
     <% end %>
   <%else%>
-    <tr>
+    <tr class="warning">
       <td colspan="5">Sorry, No Environments in this Project.</td>
     </tr>
   <%end%>
