--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,6 @@
+<% if !notice %>
 <p id="notice"><%= notice %></p>
+<%end%>
 <div class="well">
   <div style="margin-left: 10px;">
 <h3 class="pull-left"> <%= @project.name %></h3>&nbsp;&nbsp;
