--- a/app/views/environments/_rds_configuration.html.erb
+++ b/app/views/environments/_rds_configuration.html.erb
@@ -8,6 +8,7 @@
     <%= simple_form_for Instance.new, url: '' , html: { id: 'rds-config-frm'} do |f|%>
       <%= f.input :label, input_html: { id: 'rds_label', class: 'instance_label'} %>
       <div id="rds_instance_type_id" class="hide"></div>
+      <label>Instance Type</label>      
       <div id="rds-slider">
         <%= render 'slider' %>
       </div>
