Resize map after loading of all dom elements

--- a/app/assets/javascripts/environment.js.erb
+++ b/app/assets/javascripts/environment.js.erb
@@ -130,6 +130,7 @@ $(document).ready(function(){
   //On click event for "create similar stack" it replicate Environment modal
   $('#graph-replicate').click(function(){
     $('#graph-save-modal').modal('show');
+     //resize_regionmap();
   });
 
   //On click event for "Save" button on graph toolbar during edit
