--- a/app/views/environments/_elb_configuration.html.erb
+++ b/app/views/environments/_elb_configuration.html.erb
@@ -1,21 +1,21 @@
-<div id="elb-configuration" class="modal hide fade in" style="display: none; ">
+<div id="<%= resource_type.name %>-configuration" class="modal hide fade in" style="display: none; ">
   <div class="modal-header">  
     <a class="close" data-dismiss="modal">×</a>  
-    <h3>ELB instance configuration</h3>
+    <h3><%= resource_type.name %> instance configuration</h3>
   </div>  
   <div class="modal-body">  
-    <div id="elb-config-error-messages"></div>
-    <%= simple_form_for Instance.new, url: '' , html: { id: 'elb-config-frm'} do |f|%>
-      <%= f.input :label, input_html: { id: 'elb_label', class: 'instance_label'} %>
-      <div id="elb_ip_address"></div>
+    <div id="<%= resource_type.name %>-config-error-messages"></div>
+    <%= simple_form_for Instance.new, url: '' , html: { id: "#{resource_type.name}-config-frm"} do |f|%>
+      <%= f.input :label, input_html: { id: "#{ resource_type.name}_label", class: 'instance_label'} %>
+      <div id="<%= resource_type.name %>_ip_address"></div>
       <br />
-      <div id="elb_public_dns"></div>
-      <%= hidden_field_tag :elb_parents_list, ResourceType.find_by_name("ELB").parents_list, :id => 'elb_parents_list'%>
+      <div id="<%= resource_type.name %>_public_dns"></div>
+      <%= hidden_field_tag "#{resource_type.name}_parents_list", resource_type.parents_list, :id => "#{resource_type.name}_parents_list"%>
   </div>
   <div class="modal-footer">
     <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
     <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>
-    <a class="btn btn-danger hide pull-left" data-dismiss="modal" id="elb_delete" onclick='delete_instance("elb");' title="Delete the ELB resource">Delete</a>
+    <a class="btn btn-danger hide pull-left" data-dismiss="modal" id="<%= resource_type.name %>_delete" onclick='delete_instance("<%= resource_type.name %>");' title="Delete the <%= resource_type.name %> resource">Delete</a>
   </div>
   <% end %>
 </div>  
