--- a/app/assets/javascripts/regionSelector.js.erb
+++ b/app/assets/javascripts/regionSelector.js.erb
@@ -35,6 +35,11 @@ $(document).ready(function(){
      $('.regionmap').vectorMap('get', 'mapObject').clearSelectedMarkers();
      $('#current_region').html(''+ markers[index].display_name + ' ( ' + markers[index].name + ' ) ');     
      $('#graph-region-id').val(markers[index].id);
+     if( $('.load_image').length <= 1 ){
+      console.log($('.load_image').length);
+      $('<img src="/assets/ajax-loader-small.gif" class="load_image" alt="Please wait..">').insertAfter('#graph-key-pair-name');
+      $('<img src="/assets/ajax-loader-small.gif" class="load_image" alt="Please wait..">').insertAfter('#graph-security-group-name');
+     }
      get_key_pairs_and_security_groups(markers[index].name);
      event.preventDefault();     
    },
