--- a/app/views/projects/_project_environments.html.erb
+++ b/app/views/projects/_project_environments.html.erb
@@ -22,7 +22,7 @@
     <% end %>
   <%else%>
     <tr class="warning">
-      <td colspan="5">Sorry, No Environments in this Project.</td>
+      <td colspan="5">Sorry, No environments yet, in this project.</td>
     </tr>
   <%end%>
 </table>
