--- a/app/views/environments/_s3_configuration.html.erb
+++ b/app/views/environments/_s3_configuration.html.erb
@@ -7,7 +7,7 @@
     <div id="<%= resource_type.name %>-config-error-messages"></div>
     <%= simple_form_for Instance.new, url: "" , html: { id: "#{resource_type.name}-config-frm"} do |f|%>
       <%= f.input :label, label: 'Name', input_html: { id: "#{resource_type.name}_label", class: "instance_label"} %>
-      <%= f.input :access_control, label: 'Access Control', :include_blank => true, :collection => ["public","private","protected"], input_html: {id: "#{resource_type.name}_access_control"} %>
+      <%= f.input :access_control, label: 'Access Control', :collection => VisualCloudConfig[:s3_access_control], input_html: {id: "#{resource_type.name}_access_control"} %>
       <%= hidden_field_tag "#{resource_type.name}_parents_list", resource_type.parents_list, :id => "#{resource_type.name}_parents_list"%>
       <%= f.hidden_field(:xpos, id: "#{resource_type.name}_xpos")%>
       <%= f.hidden_field(:ypos, id: "#{resource_type.name}_ypos")%>
